# mlops-utilities

./: .gitignore  .gitlab-ci.yml  .pylintrc  .pypirc  DEVELOPMENT.md  LICENSE.txt  MANIFEST  Makefile  README.md  bump_version.sh  pyproject.toml  setup.py  test.ipynb
.github/workflows/: publish.yaml  test.yaml
docs/: config-README.md  mlops.py
mlops/: actions.py  utils.py
mlops_config/: dsl.py
mlops_config/sagemaker/: dsl.py
mlops_sm/: __init__.py  actions.py
mlops_utilities/: __init__.py  actions.py  helpers.py  notebook_helper.py
mlops_utilities/notebook_helper/: image_helper.py  processing_helper.py  training_helper.py
mlops_utilities/notebook_test_processing_code/: entrypoint.sh  hyperparams.json  processing_local_pipeline.ipynb  requirements.txt  training_local_pipeline_updated.ipynb  training_pipeline.defaults.yml
mlops_utilities/notebook_tests/: test.ipynb  test_training.ipynb
tests/: integration_tests.py  pipeline.defaults.yml  pipeline.py  test.py  test_integration.py
tests/components/preprocessing/: Dockerfile  build_and_push.sh  entrypoint.sh  main.py  requirements.txt  serving.Dockerfile
tests/pipelines/: training_pipeline.defaults.yml  training_pipeline.py
